...
            android:padding="10dp"
            android:stretchColumns="1">

            <TableRow android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/firstNameText"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:hint="FirstName"
                    android:inputType="textPersonName"
...

            </TableRow>
        </TableLayout>
    </LinearLayout>

    <Button
        android:id="@+id/registrationButton"
        style="@style/buttonStyle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:onClick="userRegistrationButtonPress"
...
