<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".controller.MainController">
    <item
        android:id="@+id/action_post"
        android:orderInCategory="100"
        android:title="Post Vehicle"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_search"
        android:orderInCategory="101"
        android:title="Search Vehicle"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_manage"
        android:orderInCategory="101"
        android:title="Manage Account"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="101"
        android:title="Logout"
        app:showAsAction="never" />
</menu>
