...
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:layout_margin="5dp"
            android:background="#000000" />

        <TextView
            android:id="@+id/Share_Vehicle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Share Vehicle"
            android:textSize="25dp"
            android:layout_weight="2.62" />

...
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:layout_margin="5dp"
            android:background="#ffffff" />

        <TextView
            android:id="@+id/Find_Vehicle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" Find Vehicle "
            android:textColor="#ffffff"
            android:textSize="25dp"
            android:layout_weight="2.62" />
...
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:layout_margin="5dp"
            android:background="#000000" />

        <TextView
            android:id="@+id/My_Account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" My Account  "
            android:textSize="25dp"
            android:layout_weight="2.62" />

...
