...
        android:translationZ="@dimen/abc_action_bar_progress_bar_size" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Accept"
        android:id="@+id/acceptbuttonid"
        android:onClick="AcceptAgreementButtonClick"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
